--- a/block-BJaajw/code/index.css
+++ b/block-BJaajw/code/index.css
@@ -202,3 +202,40 @@ strong {
 .align {
     align-items: center;
 }
+
+
+/*loading spinner*/
+
+
+@keyframes donut-spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .donut {
+    display: inline-block;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #7983ff;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: donut-spin 1.2s linear infinite;
+  }
+
+
+  .spinner {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+  }
+
+
+  .error {
+      display: none;
+  }
