GOT book application

--- a/block-BJaakg/code/index.css
+++ b/block-BJaakg/code/index.css
@@ -63,7 +63,7 @@ table {
 }
 
 body {
-    background-color: #745DAF;
+    background: linear-gradient(to right, #7759ab, #687ce3);
 }
 header {
     
@@ -120,3 +120,40 @@ article button {
 article button:hover {
     background-color: green;
 }
+
+
+.characters {
+    display: flex;
+    flex-direction: column;
+    color: aliceblue;
+}
+
+
+.characters li {
+    display: block;
+    margin-bottom: 4px;
+    border: 1px blanchedalmond solid;
+}
+
+
+
+@keyframes donut-spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+
+
+  .donut {
+    display: inline-block;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #7983ff;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: donut-spin 1.2s linear infinite;
+  }
